--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>المحكمة الابتدائية المغربية</title>
+    <title>المحكمة الابتدائية بالعيون</title>
     <link rel="icon" href="./public/img/Logo.png">
   </head>
   <body>
